adjusted project-card styling
fixed the window proportion issues it was having

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         alt="Screenshot of React website with Spotify integration" 
         description="Worked on a team to make a React-based website which allowed users to connect to their Spotify and listen to music and share what they were listening to with friends, featuring a pomodoro timer and task management." 
         link="video/react.mp4" 
-        link-text="Watch Demo">
+        link-text="Watch Demo" is-even>
       </project-card>
       
       <project-card 
