--- a/404.html
+++ b/404.html
@@ -253,7 +253,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2023 Your Name - All Rights Reserved</p>
+    <p>Dino 404 page </p>
   </footer>
 
   <script>
